// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateProgressDialog should render cancelling 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={true}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={false}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Downloading update
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Downloading nRF Connect 
      1.2.3
      ...
    </p>
    <ForwardRef(Bootstrap(ProgressBar))
      label="42%"
      now={42}
    />
    <p>
      This might take a few minutes. The application will restart and update once the download is complete.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <ForwardRef(Bootstrap(Button))
      disabled={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`UpdateProgressDialog should render invisible 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={true}
  show={false}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={false}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Downloading update
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Downloading nRF Connect 
      ...
    </p>
    <p>
      This might take a few minutes. The application will restart and update once the download is complete.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <Spinner
      className="core-spinner"
      size={16}
    />
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`UpdateProgressDialog should render with cancel disabled when 100 percent complete 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={true}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={false}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Downloading update
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Downloading nRF Connect 
      1.2.3
      ...
    </p>
    <ForwardRef(Bootstrap(ProgressBar))
      label="100%"
      now={100}
    />
    <p>
      This might take a few minutes. The application will restart and update once the download is complete.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <ForwardRef(Bootstrap(Button))
      disabled={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`UpdateProgressDialog should render with version, percent downloaded, and cancellable 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={true}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={false}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Downloading update
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Downloading nRF Connect 
      1.2.3
      ...
    </p>
    <ForwardRef(Bootstrap(ProgressBar))
      label="42%"
      now={42}
    />
    <p>
      This might take a few minutes. The application will restart and update once the download is complete.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <ForwardRef(Bootstrap(Button))
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`UpdateProgressDialog should render with version, without progress, and not cancellable 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={true}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={false}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Downloading update
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Downloading nRF Connect 
      1.2.3
      ...
    </p>
    <p>
      This might take a few minutes. The application will restart and update once the download is complete.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <Spinner
      className="core-spinner"
      size={16}
    />
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;
